--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native-animatable": "^0.6.0",
     "react-native-device-info": "^0.9.3",
     "react-native-keyboard-aware-view": "0.0.8",
+    "react-native-push-notification": "^1.0.6",
     "react-native-spinkit": "^0.1.1",
     "react-native-store": "^0.4.1"
   },
